<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/back"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/app_name"
            app:titleTextColor="@color/text" />

        <LinearLayout
            android:id="@+id/group_view_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp" />


            <LinearLayout
                android:id="@+id/group_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="12dp"  />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/participants"
                android:textStyle="bold"/>

            <LinearLayout
                android:id="@+id/participants_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/expenses"
                android:textStyle="bold"/>

            <LinearLayout
                android:id="@+id/expenses_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="12dp" />

            <Button
                android:id="@+id/delete_group_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_group_button_text" />

            <Button
                android:id="@+id/edit_group_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_group_button_text"
                android:layout_marginTop="8dp" />

            <Button
                android:id="@+id/view_debt_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_debts_button_text"
                android:layout_marginTop="8dp" />
            <Button
                android:id="@+id/new_expense_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_expense_button_text"
                android:layout_marginTop="8dp" />

            <Button
                android:id="@+id/back_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:layout_marginTop="24dp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
