<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/back"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/app_name"
            app:titleTextColor="@color/text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/expense_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense_name_hint"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp" />

            <EditText
                android:id="@+id/expense_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:hint="@string/expense_name_hint" />

            <TextView
                android:id="@+id/credit_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>

            <LinearLayout
                android:id="@+id/creditors_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distribution"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp" />

            <Spinner
                android:id="@+id/distribution_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:entries="@array/distribution_options" />

            <TextView
                android:id="@+id/debt_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>

            <LinearLayout
                android:id="@+id/debtors_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />



            <Button
                android:id="@+id/save_expense_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/save_expense_button_text" />

            <Button
                android:id="@+id/cancel_expense_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/cancel" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>